--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
       }
     }
   </style>
-</head>
+</head>git commit -m "first commit"
 <body>
-  <h1>💖 Happy Anniversary 💖</h1>
+  <h1>Happy Anniversary</h1>
   <button class="cute-button" onclick="document.location = 'music.html'">
     <span></span>
     <span></span>
