--- a/success.html
+++ b/success.html
@@ -159,7 +159,7 @@
     /* Responsive adjustments */
     @media (max-width: 768px) {
       .message-box {
-        width: 90%;
+        width: 70%;
         padding: 20px;
         border-radius: 15px;
       }
@@ -185,7 +185,7 @@
   <div class="balloon"></div>
 
   <div class="message-box">
-    <h1>💫 Letter to Tonkaow 💫</h1>
+    <h1>💫 Letter  💫</h1>
     <p>เค้ารักกกเธอมากมากกเลยนะะ เค้าขอมีเธอไปตลอดไม่ว่าจะอีกกี่ปี กี่เดือน กี่วัน เค้าจะอยู่กับเธอ อยู่ทะเลาะกันกับเค้าไปนานๆเลยนะะะ เค้าจะจับมือเธอไว้ให้แน่นๆเลยยไม่ปล่อยเธอไปไหนน เค้าจะผ่านปัญหาทุกอย่างไปกับเธอนะะ กดปุ่มข้างล่างต่ออด้วยน้าา</p>
     <p class="heart">❤️</p>
     <button class="trigger-btn" onclick="triggerAnimation()">ปุ่มนี้ปุ่มนี้ 😍</button>
@@ -194,12 +194,7 @@
   <div class="image-grid">
     <img src="รูป/59.jpg" alt="Cute Image 1">
     <img src="รูป/65.jpg" alt="Cute Image 2">
-    <img src="รูป/64.jpg" alt="Cute Image 3">
-    <img src="รูป/56.jpg" alt="Cute Image 4">
-    <img src="รูป/57.jpg" alt="Cute Image 5">
-    <img src="รูป/58.jpg" alt="Cute Image 6">
-    <img src="รูป/55.jpg" alt="Cute Image 7">
-    <img src="รูป/60.jpg" alt="Cute Image 8">
+    
   </div>
 
   <script>
