--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       }
     }
   </style>
-</head>git commit -m "first commit"
+</head>
 <body>
   <h1>Happy Anniversary</h1>
   <button class="cute-button" onclick="document.location = 'music.html'">
