--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
+      min-height: 100vh; /* ใช้ min-height แทน height เพื่อรองรับความสูง */
+      padding: 20px; /* เพิ่ม Padding เพื่อให้เนื้อหาชิดขอบ */
+      box-sizing: border-box;
     }
 
     h1 {
@@ -141,6 +143,22 @@
       font-size: 1.2em;
       text-align: center;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+     /* Media Queries สำหรับหน้าจอเล็ก */
+     @media (max-width: 768px) {
+      h1 {
+        font-size: 2em;
+      }
+
+      .cute-button {
+        padding: 12px 25px;
+        font-size: 1.2em;
+      }
+
+      .image-container {
+        max-width: 90%;
+      }
     }
 
     @media (max-width: 480px) {
