--- a/success.html
+++ b/success.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Happy Anniversary Note</title>
+  <title>Responsive Anniversary Note</title>
   <link href="https://fonts.googleapis.com/css2?family=Mali:wght@300;400;500&family=Pacifico&display=swap" rel="stylesheet">
   <style>
     body {
@@ -12,7 +12,6 @@
       margin: 0;
       padding: 0;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
@@ -22,50 +21,37 @@
 
     .message-box {
       background: white;
-      padding: 40px;
+      padding: 30px; /* เพิ่ม padding */
+      padding: 30px;
       border-radius: 20px;
       box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
-      max-width: 90%;
-      width: 600px;
-      opacity: 0;
-      transform: scale(0.8);
-      animation: fadeInScale 2.5s ease forwards 0.5s;
+      max-width: 600px;
+      width: 85%; /* ลดจาก 90% เพื่อไม่ให้ชิดขอบ */
       border: 4px solid #ff87ab;
+      margin: 0 auto; /* เว้นระยะห่างเท่ากันทั้งซ้ายและขวา */
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 10px;
-      position: relative;
+      gap: 15px;
     }
 
     .message-box h1 {
       color: #ff5e78;
-      font-size: 2.5rem;
+      font-size: 2rem;
       margin: 0;
-      font-family: 'Mali', cursive;
     }
 
     .message-box p {
       color: #7b7b7b;
-      font-size: 1.25rem;
+      font-size: 1rem;
       margin: 0;
+      line-height: 1.6;
     }
 
     .message-box .heart {
-      font-size: 3rem;
+      font-size: 2rem;
       color: #ff87ab;
       animation: heartbeat 1.5s infinite;
-    }
-
-    @keyframes fadeInScale {
-      0% {
-        opacity: 0;
-        transform: scale(0.8);
-      }
-      100% {
-        opacity: 1;
-        transform: scale(1);
-      }
     }
 
     @keyframes heartbeat {
@@ -77,64 +63,6 @@
       }
     }
 
-    /* Balloons */
-    .balloon {
-      position: absolute;
-      bottom: -150px;
-      width: 50px;
-      height: 70px;
-      background-color: #ff87ab;
-      border-radius: 50%;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-      animation: floatUp 5s ease-in infinite;
-    }
-
-    .balloon:nth-child(2) {
-      background-color: #ff5e78;
-      animation-delay: 1s;
-      left: 30%;
-    }
-
-    .balloon:nth-child(3) {
-      background-color: #f9c4e6;
-      animation-delay: 2s;
-      left: 60%;
-    }
-
-    @keyframes floatUp {
-      0% {
-        transform: translateY(0);
-        opacity: 1;
-      }
-      100% {
-        transform: translateY(-120vh);
-        opacity: 0;
-      }
-    }
-
-    /* Image grid */
-    .image-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-      gap: 20px;
-      margin-top: 20px;
-      max-width: 80%;
-    }
-
-    .image-grid img {
-      width: 100%;
-      height: auto;
-      border-radius: 15px;
-      box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-
-    .image-grid img:hover {
-      transform: scale(1.1);
-      box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
-    }
-
-    /* Button to trigger animation */
     .trigger-btn {
       background-color: #ff87ab;
       color: white;
@@ -143,58 +71,70 @@
       border: none;
       border-radius: 20px;
       cursor: pointer;
-      margin-top: 20px;
-      animation: fadeIn 3s ease forwards 2s;
+      transition: background 0.3s;
     }
 
-    @keyframes fadeIn {
-      0% {
-        opacity: 0;
-      }
-      100% {
-        opacity: 1;
-      }
+    .trigger-btn:hover {
+      background-color: #ff5e78;
     }
 
-    /* Responsive adjustments */
+    /* Responsive Design */
     @media (max-width: 768px) {
       .message-box {
-        width: 70%;
-        padding: 20px;
-        border-radius: 15px;
+        padding: 20px; /* ลด padding ลง */
+        width: 80%; /* ปรับความกว้าง */
+        margin: 10px auto; /* เพิ่มระยะห่างจากขอบบน */
       }
 
       .message-box h1 {
-        font-size: 2rem;
+        font-size: 1.5rem;
       }
 
       .message-box p {
-        font-size: 1rem;
+        font-size: 0.9rem;
       }
 
       .message-box .heart {
-        font-size: 2.5rem;
+        font-size: 1.8rem;
+      }
+
+      .trigger-btn {
+        padding: 8px 16px;
+        font-size: 0.9rem;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .message-box {
+        padding: 5px; /* ลด padding เพิ่มเติม */
+        width: 85%; /* ปรับความกว้าง */
+      }
+      .message-box h1 {
+        font-size: 1.2rem;
+      }
+
+      .message-box p {
+        font-size: 0.8rem;
+      }
+
+      .message-box .heart {
+        font-size: 1.5rem;
+      }
+
+      .trigger-btn {
+        padding: 6px 12px;
+        font-size: 0.8rem;
       }
     }
   </style>
 </head>
 <body>
-  <!-- Balloons floating -->
-  <div class="balloon"></div>
-  <div class="balloon"></div>
-  <div class="balloon"></div>
-
+  
   <div class="message-box">
     <h1>💫 Letter 💫</h1>
     <p>เค้ารักกกเธอมากมากกเลยนะะ เค้าขอมีเธอไปตลอดไม่ว่าจะอีกกี่ปี กี่เดือน กี่วัน เค้าจะอยู่กับเธอ อยู่ทะเลาะกันกับเค้าไปนานๆเลยนะะะ เค้าจะจับมือเธอไว้ให้แน่นๆเลยยไม่ปล่อยเธอไปไหนน เค้าจะผ่านปัญหาทุกอย่างไปกับเธอนะะ กดปุ่มข้างล่างต่ออด้วยน้าา</p>
     <p class="heart">❤️</p>
     <button class="trigger-btn" onclick="triggerAnimation()">ปุ่มนี้ปุ่มนี้ 😍</button>
-  </div>
-
-  <div class="image-grid">
-    <img src="รูป/59.jpg" alt="Cute Image 1">
-    <img src="รูป/65.jpg" alt="Cute Image 2">
-    
   </div>
 
   <script>
